--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,8 @@
     />
     <link rel="manifest" href="manifest.json" />
     <meta name="theme-color" content="#1976d2" />
-  </head>
+  <link rel="stylesheet" href="styles.f349a3042620634cfaec.css"></head>
   <body>
     <app-root></app-root>
-  <script src="runtime-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills-es2015.js" type="module"></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule defer></script><script src="vendor-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es2015.js" type="module"></script><script src="main-es5.js" nomodule defer></script></body>
+  <script src="runtime-es2015.0811dcefd377500b5b1a.js" type="module"></script><script src="runtime-es5.0811dcefd377500b5b1a.js" nomodule defer></script><script src="polyfills-es5.7edef608c0a30f6b273d.js" nomodule defer></script><script src="polyfills-es2015.9b0d8557f647e32f0fc9.js" type="module"></script><script src="main-es2015.5531f45ff08d17974e3f.js" type="module"></script><script src="main-es5.5531f45ff08d17974e3f.js" nomodule defer></script></body>
 </html>
