--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,39 @@
     />
     <link rel="manifest" href="manifest.json" />
     <meta name="theme-color" content="#1976d2" />
+    <script
+      id="ze-snippet"
+      src="https://static.zdassets.com/ekr/snippet.js?key=8c032974-d997-4bb9-876c-1a9a45fe6e14"
+    ></script>
   <link rel="stylesheet" href="styles.f349a3042620634cfaec.css"></head>
+  <script type="text/javascript">
+    zE("webWidget", "setLocale", "pt-br");
+    zE("webWidget", "hide");
+    window.zESettings = {
+      webWidget: {
+        chat: {
+          suppress: true,
+        },
+        answerBot: {
+          suppress: true,
+        },
+        talk: {
+          suppress: true,
+        },
+        contactForm: {
+          suppress: false,
+          ticketForms: [{ id: 360000883491 }],
+        },
+        helpCenter: {
+          originalArticleButton: true,
+        },
+        authenticate: {
+          jwt: null,
+        },
+      },
+    };
+  </script>
   <body>
     <app-root></app-root>
-  <script src="runtime-es2015.0811dcefd377500b5b1a.js" type="module"></script><script src="runtime-es5.0811dcefd377500b5b1a.js" nomodule defer></script><script src="polyfills-es5.7edef608c0a30f6b273d.js" nomodule defer></script><script src="polyfills-es2015.9b0d8557f647e32f0fc9.js" type="module"></script><script src="main-es2015.5531f45ff08d17974e3f.js" type="module"></script><script src="main-es5.5531f45ff08d17974e3f.js" nomodule defer></script></body>
+  <script src="runtime-es2015.0811dcefd377500b5b1a.js" type="module"></script><script src="runtime-es5.0811dcefd377500b5b1a.js" nomodule defer></script><script src="polyfills-es5.7edef608c0a30f6b273d.js" nomodule defer></script><script src="polyfills-es2015.9b0d8557f647e32f0fc9.js" type="module"></script><script src="main-es2015.6582128f22ae244c2c55.js" type="module"></script><script src="main-es5.6582128f22ae244c2c55.js" nomodule defer></script></body>
 </html>
